# figital-fte

./: .env.example  .gitignore  CLAUDE.md  Readme.md  pyproject.toml  requirements.txt
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/extensions/: .registry
.specify/memory/: constitution.md
.specify/templates/: adr-template.md  constitution-template.md  phr-template.prompt.md  plan-template.md  spec-template.md  tasks-template.md
config/: agents.yaml  mcp_servers.yaml  safety_rules.yaml  settings.yaml  watchers.yaml
scripts/: ralph_loop.bat  setup_vault.py  start_watchers.bat
src/agents/: ceo_briefing_agent.py  email_agent.py  finance_agent.py  scheduler_agent.py  social_agent.py  triage_agent.py
src/core/: agent_base.py  approval_manager.py  config_loader.py  logger.py  orchestrator.py  skill_registry.py  task_item.py  vault_manager.py
src/dashboard/: briefing_generator.py  dashboard_generator.py
src/mcp_servers/: calendar_mcp.py  filesystem_mcp.py  gmail_mcp.py  linkedin_mcp.py  odoo_mcp.py  whatsapp_mcp.py
src/skills/: communication_skills.py  document_skills.py  email_skills.py  finance_skills.py  social_skills.py  vault_skills.py
src/watchers/: banking_watcher.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  watcher_runner.py  whatsapp_watcher.py
tests/: conftest.py  test_approval_manager.py  test_orchestrator.py  test_task_item.py  test_vault_manager.py
vault/: Company_Handbook.md
(+16 files in other folders)
